<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oh, you see!</string>
    
    <string name="login">登录</string>
    <string name="login_label_username">帐号</string>
    <string name="login_username_hint">请输入您的学号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="login_label_signup">注册</string>
    <string name="forget_password">忘记密码？ </string>

    <string name="stu_id">学号</string>
    <string name="name">姓名</string>
    <string name="nickname">昵称</string>
    <string name="realname">真实姓名</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="grade">年级</string>
    <string name="college">学院</string>
    <string name="department">系别</string>
    <string name="email">邮箱</string>
    <string name="contact">联系方式</string>
    <string name="signup">注册</string>
    <string name="cancel">取消</string>
    
    <string name="add_lost_event">添加丢失信息</string>
    <string name="set_lost_time">设置丢失时间</string>
    <string name="set_lost_date">设置丢失日期</string>
    <string name="lost_place">丢失地点</string>
    <string name="submit">提交</string>
    <string name="description">描述</string>
    
    <string name="add_found_event">添加拾获信息</string>
    <string name="set_found_time">设置拾获时间</string>
    <string name="set_found_date">设置拾获日期</string>
    <string name="found_place">拾获地点</string>
    
    <!-- list_item -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- Fragment Title -->
    <string name="lost_event">丢失信息</string>
    <string name="found_event">拾获信息</string>
    
    
    <!-- FourthFragment -->
    <string name="personal_info">个人信息</string>
    <string name="event_about_me">有关我的</string>
    <string name="event_by_me">我发布的</string>
    <string name="change_password">修改密码</string>
    <string name="logout">注销登录</string>
    
    <!-- SearchResultActivity -->
    <string name="search_result">搜索结果</string>
    <string name="search_content">搜索内容</string>
    <string name="search_label">搜索标签</string>
    <string name="search_hint">请输入学号或姓名</string>
    
    <!-- EventDetails -->
    <string name="event_details">详细信息</string>
    <string name="user_img">用户头像</string>
    <string name="publisher">发布者</string>
    <string name="add_time">发布时间</string>
    <string name="event_state">事件状态</string>
    <string name="close_event">关闭事件</string>
    <string name="alter_event">修改事件</string>
    
    <!-- Tab -->
    <string name="tab_lost">丢失</string>
    <string name="tab_found">拾获</string>
    <string name="tab_campus">校园</string>
    <string name="tab_me">我</string>
    
    <!-- Menu -->
    <string name="action_search">搜索</string>
    <string name="menu_add_lost_info">添加丢失信息</string>
    <string name="menu_add_found_info">添加拾获信息</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_exit">退出应用</string>

    <!-- CampusFragment -->
    <string name="open_webview">校园卡查询网站</string>
    <string name="web_view">校园一卡通网站</string>
    <string name="call_phone">拨打挂失电话</string>
    <string name="notification">通知</string>
    <string name="grid_view_item_img_content_description">grid_view子项的图片</string>
    
    <!-- ChangePersonalInfo -->
    <string name="change_personal_info">修改个人信息</string>
    <string name="save">保存</string>
    <string name="change_userpic">更改头像</string>
    
    <!-- ChangeUserpic -->
    <string name="userpic">用户头像</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从相册中选取</string>
    
    <!-- ViewBigUserpic -->
    <string name="view_big_userpic">查看大图</string>
    <string name="view_big_userpic_content_description">查看大图</string>
    
    <!-- ChangePassword -->
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认密码</string>
    <string name="confirm">确定</string>

</resources>
