<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A0090900" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:padding="2dp">
        <ImageView 
        android:id="@+id/change_userpic_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/userpic"
        android:src="@drawable/app_icon"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
    <Button 
        android:id="@+id/change_userpic_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/take_photo"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/green_button_selector"/>
    <Button 
        android:id="@+id/change_userpic_choose_from_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_from_album"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/skyblue_button_selector"/>
    <Button 
        android:id="@+id/change_userpic_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:text="@string/cancel"
        android:background="@drawable/red_button_selector"/>
    </LinearLayout>
    

</LinearLayout>
