<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_login" >
    
    <!-- 昵称 -->
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
   
        <TextView 
	        android:id="@+id/nickname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/nickname"/>
    	<EditText 
	        android:id="@+id/nickname_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        />
    </LinearLayout>
   
    
    <!-- 学号 -->
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
	        android:id="@+id/stu_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stu_id"/>
	    <EditText 
	        android:id="@+id/stu_id_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        />
    </LinearLayout>
    
    
    <!-- 密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
	        android:id="@+id/password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password"/>
	    <EditText 
	        android:id="@+id/password_edit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        />
    </LinearLayout>
    
    
    <!-- 密码确认 -->
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
		    android:id="@+id/password_confirm"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/password_confirm"/>
		<EditText 
		    android:id="@+id/password_confirm_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    />
    </LinearLayout>

	<!-- 年级  自动填充-->
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
		    android:id="@+id/grade"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/grade"/>
		<EditText 
		    android:id="@+id/grade_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    />
    </LinearLayout>

	
	<!-- 学院  自动填充-->
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
		    android:id="@+id/college"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/college"/>
		<EditText 
		    android:id="@+id/college_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    />
    </LinearLayout>
	
	
	<!-- 邮箱 -->
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
		    android:id="@+id/email"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/email"/>
		<EditText 
		    android:id="@+id/email_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    />
    </LinearLayout>
	
	
	<!-- 联系方式 -->
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    <TextView 
		    android:id="@+id/contact"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/contact"/>
		<EditText 
		    android:id="@+id/contact_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
	    />
    </LinearLayout>
    
	<LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	    
	    <!-- 取消button -->
		<Button
		    android:id="@+id/cancel_signup"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel_signup_button"/>
		    />
		    
	    <!-- 注册button -->
		<Button
		    android:id="@+id/signup_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/signup_button"/>
		
		
    </LinearLayout>
	
	"


</LinearLayout>
