<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!--
         padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部
    -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >


            <TextView
                android:id="@+id/login_user_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_label_username" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_user_input"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

        <TextView
                android:id="@+id/login_password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_edit"
                android:layout_marginTop="3dp"
                android:text="@string/login_label_password" />

        <EditText
                android:id="@+id/password_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_input"
                android:inputType="textPassword"
                android:password="true"
                android:singleLine="true" />

        <Button
            android:id="@+id/signin_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignRight="@+id/password_edit"
            android:layout_below="@+id/password_edit"
            android:layout_marginRight="20dp"
            android:background="@drawable/green_button"
            android:text="@string/login_label_signin"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/login_signup_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/password_edit"
            android:layout_marginRight="27dp"
            android:layout_toLeftOf="@+id/signin_button"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signup"
            android:textColor="#FFFFFFFF" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/forget_password"
            android:textColor="#888" />

        <ImageView
            android:id="@+id/miniTwitter_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/login_ouc" />

    </RelativeLayout>

</LinearLayout>