<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 学号 -->
        	<TextView
		        android:id="@+id/add_found_event_stu_id"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/stu_id"/>
		    <EditText 
		        android:id="@+id/add_found_event_stu_id_edit"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="5"
		        android:singleLine="true"
		        />
	</LinearLayout>
	  
    <!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
    
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 姓名 -->
        	<TextView 
		        android:id="@+id/add_found_event_name"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/name"
		        />
	    	<EditText 
		        android:id="@+id/add_found_event_name_edit"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="5"
		        android:singleLine="true"
		        />
    </LinearLayout>
    
	<!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 联系方式 -->
        	<TextView 
			    android:id="@+id/add_found_event_contact"
			    android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
			    android:text="@string/contact"/>
			<EditText 
			    android:id="@+id/add_found_event_contact_edit"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="5"
			    android:singleLine="true"
		    	/>
    </LinearLayout>
    
	
	<!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 选择丢失日期 -->
        	<TextView 
			    android:id="@+id/add_event_found_date_text"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:paddingLeft="15dp"
		        android:gravity="bottom"
			    android:text="@string/set_found_date"/>
           <DatePicker
	            android:id="@+id/add_event_found_date_picker"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:calendarViewShown="false" />
    </LinearLayout>
    
	<!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- 丢失时间 -->
        	<TextView 
			    android:id="@+id/add_event_found_time_text"
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:paddingLeft="15dp"
		        android:gravity="bottom"
			    android:text="@string/set_found_time"/>
        	<TimePicker 
        	    android:id="@+id/add_event_found_time_picker"
        	    android:layout_width="match_parent"
        	    android:layout_height="match_parent"/>
    </LinearLayout>
    
	<!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        	<!-- 丢失地点 -->
        	<TextView 
			    android:id="@+id/add_event_found_place"
			    android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:layout_gravity="center"
		        android:gravity="center"
			    android:text="@string/found_place"/>
			<EditText 
			    android:id="@+id/add_event_found_place_edit"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="5"
			    />
    </LinearLayout>
    
    <!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 描述 -->
        	<TextView 
			    android:id="@+id/add_event_found_decription"
			    android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:layout_gravity="center"
		        android:gravity="center"
			    android:text="@string/description"/>
			<EditText 
			    android:id="@+id/add_event_found_decription_edit"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="5"
			    />
    </LinearLayout>
    
	<!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">
			<LinearLayout 
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <!-- 取消button -->
			<Button
			    android:id="@+id/add_found_event_cancel"
			    android:layout_width="120dp"
		        android:layout_height="40dp"
		        android:gravity="center"
		        android:layout_gravity="center"
			    android:text="@string/cancel"
			    android:background="@drawable/red_button_selector"
			    android:textColor="#FFFFFFFF"/>
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <!-- 提交button -->
			<Button
			    android:id="@+id/add_found_event_submit"
			    android:layout_width="120dp"
		        android:layout_height="40dp"
			    android:gravity="center"
			    android:layout_gravity="center"
			    android:text="@string/submit"
			    android:background="@drawable/green_button_selector"
			    android:textColor="#FFFFFFFF"/>
			</LinearLayout>
    </LinearLayout>
    
</LinearLayout>

</ScrollView>
