<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="15dp"
    android:layout_marginTop="20dp">
    
    <!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
    <!-- 旧密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/change_password_old_password_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/old_password"/>
        
        <EditText 
            android:id="@+id/change_password_old_password_edit"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
    	<CheckBox
            android:id="@+id/change_password_old_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:checked="false"/>
    </LinearLayout>

    <!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
    <!-- 新密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/change_password_new_password_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/new_password"/>
        
        <EditText 
            android:id="@+id/change_password_new_password_edit"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
    	<CheckBox
            android:id="@+id/change_password_new_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:checked="false"/>
    </LinearLayout>

    <!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<!-- 确认新密码 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/change_password_confirm_new_password_text"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/confirm_new_password"/>
        
        <EditText 
            android:id="@+id/change_password_confirm_new_password_edit"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        
    	<CheckBox
            android:id="@+id/change_password_confirm_new_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:checked="false"/>
    </LinearLayout>
    
    <!-- 分割线 -->
	<View android:layout_width="fill_parent" 
	    android:layout_height="1dp" 
	    android:background="#90909090" 
	    android:layout_marginBottom="5dp" 
	    android:layout_marginTop="5dp"/>
	
	<TextView 
	    android:id="@+id/change_password_hint_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="end"
	    android:gravity="end"
	    android:padding="10dp"
	    android:hint="提示：请输入旧密码"
	    />
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        	<!-- 取消button -->
			<Button
			    android:id="@+id/change_password_cancel_button"
			    android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:layout_marginRight="10dp"
			    android:text="@string/cancel"/>
			    />
	
			<!-- 提交button -->
			<Button
			    android:id="@+id/change_password_confirm_button"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="2"
			    android:gravity="center"
			    android:layout_marginLeft="10dp"
			    android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
